[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/enemyA/EnemyA.gd" type="Script" id=1]
[ext_resource path="res://art/enemy/guada√±a.png" type="Texture" id=2]
[ext_resource path="res://art/GUI/lifebar_bg.png" type="Texture" id=3]
[ext_resource path="res://art/GUI/lifebar_fill.png" type="Texture" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 40.0
height = 150.0

[sub_resource type="Animation" id=2]
resource_name = "Attack"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=3]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Run"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 4, 5 ]
}

[node name="EnemyA" type="KinematicBody2D" groups=[
"Enemigo",
]]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 10 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 2 )
anims/Idle = SubResource( 3 )
anims/Run = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
vframes = 3
hframes = 4
frame = 2

[node name="AreaAtaque" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="AreaAtaque"]
polygon = PoolVector2Array( -1.31003, -103.596, -94.1638, -52.5267, -122.794, 8.60197, -91.0687, 69.7307, -2.08383, 100.682 )

[node name="BarraVida" type="TextureProgress" parent="."]
visible = false
margin_left = -96.9267
margin_top = -139.574
margin_right = 299.073
margin_bottom = -86.5744
rect_scale = Vector2( 0.5, 0.5 )
value = 50.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 4 )
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
